--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -60,10 +60,10 @@ jobs:
     vmImage: 'ubuntu-16.04'
   steps:
   - script: | 
-      sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
-      export DISPLAY=":1"
-      xhost local:root
-      xclock
+      #sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
+      #export DISPLAY=":1"
+      #xhost local:root
+      #xclock
       # Uninstalling these packages is NOT needed for MultiBUGS, but vastly speeds up apt-get update on Azure
       sudo apt-get -qq remove '^libmono.*' '^mono.*' '^php.*'
     displayName: Uninstall unnecessary packages
@@ -77,10 +77,10 @@ jobs:
       sudo apt-get install mpich:i386 libmpich-dev:i386
       # By default, R_LIBS_USERS is not set, so need to allow package installation to site-library
       sudo chmod o+w /usr/local/lib/R/site-library
-      echo $LD_LIBRARY_PATH
-      ls /usr/lib
-      ls /usr/lib64
-      ldconfig -N -v $(sed 's/:/ /g' <<< $LD_LIBRARY_PATH)
+      #echo $LD_LIBRARY_PATH
+      #ls /usr/lib
+      #ls /usr/lib64
+      #ldconfig -N -v $(sed 's/:/ /g' <<< $LD_LIBRARY_PATH)
     displayName: Install R, 32-bit MPICH, and 32-bit GTK libraries
   - script: | 
       git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}/bbcb
@@ -96,7 +96,7 @@ jobs:
       chmod +x MultiBUGS-binary/OpenBUGS
       chmod +x MultiBUGS-binary/MultiBUGS
       chmod +x MultiBUGS-binary/run-MultiBUGS
-      ldconfig -N -v $(sed 's/:/ /g' <<< $LD_LIBRARY_PATH)
+      #ldconfig -N -v $(sed 's/:/ /g' <<< $LD_LIBRARY_PATH)
     displayName: Build MultiBUGS
   - script: |
       # needed for devtools
@@ -108,18 +108,18 @@ jobs:
       Rscript -e "install.packages(\"devtools\", repos=\"https://cloud.r-project.org\")" -e "install.packages(\"xml2\", repos=\"https://cloud.r-project.org\")" -e "devtools::install_github(\"MultiBUGS/R2MultiBUGS\")" -e "devtools::install_github(\"MultiBUGS/multibugstests\")"
     displayName: Install R packages
   - script: |
-      which mpiexec
-      which mpiexec.mpich
-      ls -la /usr/bin
-      file `which mpiexec`
-      file `which mpiexec.mpich`
-      file `which mpiexec.hydra`
+      #which mpiexec
+      #which mpiexec.mpich
+      #ls -la /usr/bin
+      #file `which mpiexec`
+      #file `which mpiexec.mpich`
+      #file `which mpiexec.hydra`
       Xvfb :99 -screen 0 1024x768x24 </dev/null &
       sleep 5
       export DISPLAY=":99"
       cd ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary
-      cp /usr/lib/i386-linux-gnu/libmpich.so.12.1.0 libmpich.so
-      cp /usr/lib/i386-linux-gnu/libmpich.so.12.1.0 ../libmpich.so
+      #cp /usr/lib/i386-linux-gnu/libmpich.so.12.1.0 libmpich.so
+      #cp /usr/lib/i386-linux-gnu/libmpich.so.12.1.0 ../libmpich.so
       cat << EOF > script.txt
       modelDisplay('log')
       modelCheck("Examples/Seedsmodel.odc")
@@ -144,17 +144,17 @@ jobs:
       #DISPLAY=:99 ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/run-MultiBUGS &
       #DISPLAY=:99 ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/MultiBUGS
       cd ../
-      chmod +x testmpiscript
-      ./testmpiscript | ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-dev0
-      ./mpi
-      mpiexec -n 1 ./mpi
-      mpiexec -n 2 ./mpi
-      mpiexec -n 3 ./mpi
-      ls -la
-      nm -D --defined-only libmpich.so
-      mpiexec.mpich -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR MultiBUGS-binary/script.txt &
+      #chmod +x testmpiscript
+      #./testmpiscript | ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-dev0
+      #./mpi
+      #mpiexec -n 1 ./mpi
+      #mpiexec -n 2 ./mpi
+      #mpiexec -n 3 ./mpi
+      #ls -la
+      #nm -D --defined-only libmpich.so
+      mpiexec.mpich -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR MultiBUGS-binary/script.txt
       #mpiexec -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox &
-      sleep 100
+      #sleep 100
       ls
       ls MultiBUGS-binary
       #DISPLAY=:99 Rscript -e "1+1"
